<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">

    <name>DeathRun</name>
    <description>An minigame based on popular game from HiveMC server.</description>

    <parent>
        <groupId>pl.mrstudios.deathrun</groupId>
        <artifactId>deathrun-parent</artifactId>
        <version>1.0.0</version>
    </parent>

    <artifactId>deathrun-core</artifactId>
    <version>${project.parent.version}</version>
    <packaging>jar</packaging>

    <build>
        <plugins>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-compiler-plugin</artifactId>
                <version>3.11.0</version>
                <configuration>
                    <source>17</source>
                    <target>17</target>
                </configuration>
            </plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-shade-plugin</artifactId>
                <version>3.5.0</version>
                <executions>
                    <execution>
                        <phase>package</phase>
                        <goals>
                            <goal>shade</goal>
                        </goals>
                        <configuration>
                            <relocations>
                                <relocation>
                                    <pattern>eu.okaeri.configs</pattern>
                                    <shadedPattern>pl.mrstudios.deathrun.libraries.okaeri-configs</shadedPattern>
                                </relocation>
                                <relocation>
                                    <pattern>org.intellij.lang.annotations</pattern>
                                    <shadedPattern>pl.mrstudios.deathrun.libraries.intellij-lang-annotations</shadedPattern>
                                </relocation>
                                <relocation>
                                    <pattern>org.jetbrains.annotations</pattern>
                                    <shadedPattern>pl.mrstudios.deathrun.libraries.jetbrains-annotations</shadedPattern>
                                </relocation>
                                <relocation>
                                    <pattern>pl.mrstudios.commons.inject</pattern>
                                    <shadedPattern>pl.mrstudios.deathrun.libraries.commons-inject</shadedPattern>
                                </relocation>
                                <relocation>
                                    <pattern>pl.mrstudios.commons.reflection</pattern>
                                    <shadedPattern>pl.mrstudios.deathrun.libraries.commons-reflection</shadedPattern>
                                </relocation>
                                <relocation>
                                    <pattern>dev.rollczi.litecommands</pattern>
                                    <shadedPattern>pl.mrstudios.deathrun.libraries.litecommands</shadedPattern>
                                </relocation>
                                <relocation>
                                    <pattern>panda.std</pattern>
                                    <shadedPattern>pl.mrstudios.deathrun.libraries.panda-std</shadedPattern>
                                </relocation>
                                <relocation>
                                    <pattern>net.kyori.adventure</pattern>
                                    <shadedPattern>pl.mrstudios.deathrun.libraries.kyori-adventure</shadedPattern>
                                </relocation>
                                <relocation>
                                    <pattern>net.kyori.examination</pattern>
                                    <shadedPattern>pl.mrstudios.deathrun.libraries.kyori-examination</shadedPattern>
                                </relocation>
                                <relocation>
                                    <pattern>me.catcoder.sidebar</pattern>
                                    <shadedPattern>pl.mrstudios.deathrun.libraries.protocol-sidebar</shadedPattern>
                                </relocation>
                            </relocations>
                            <createDependencyReducedPom>false</createDependencyReducedPom>
                        </configuration>
                    </execution>
                </executions>
            </plugin>
        </plugins>
        <resources>
            <resource>
                <directory>src/main/resources</directory>
                <filtering>true</filtering>
            </resource>
        </resources>
    </build>

    <repositories>
        <repository>
            <id>mrstudios-public</id>
            <url>https://repo.mrstudios.pl/public</url>
        </repository>
        <repository>
            <id>okaeri-repo</id>
            <url>https://storehouse.okaeri.eu/repository/maven-public/</url>
        </repository>
        <repository>
            <id>panda-repository</id>
            <url>https://repo.panda-lang.org/releases</url>
        </repository>
        <repository>
            <id>enginehub-maven</id>
            <url>https://maven.enginehub.org/repo/</url>
        </repository>
        <repository>
            <id>sonatype-snapshots</id>
            <url>https://oss.sonatype.org/content/repositories/snapshots/</url>
        </repository>
    </repositories>

    <dependencies>

        <!-- PLATFORM -->
        <dependency>
            <groupId>com.destroystokyo.paper</groupId>
            <artifactId>paper</artifactId>
            <version>1.16.5-R0.1-SNAPSHOT</version>
            <scope>provided</scope>
        </dependency>

        <!-- API -->
        <dependency>
            <groupId>pl.mrstudios.deathrun</groupId>
            <artifactId>deathrun-api</artifactId>
            <version>${project.parent.version}</version>
        </dependency>

        <!-- COMMONS -->
        <dependency>
            <groupId>pl.mrstudios.commons</groupId>
            <artifactId>commons-inject</artifactId>
            <version>1.0.0</version>
        </dependency>
        <dependency>
            <groupId>pl.mrstudios.commons</groupId>
            <artifactId>commons-reflection</artifactId>
            <version>1.0.0</version>
        </dependency>

        <!-- LITE COMMANDS -->
        <dependency>
            <groupId>dev.rollczi</groupId>
            <artifactId>litecommands-core</artifactId>
            <version>3.0.3</version>
        </dependency>
        <dependency>
            <groupId>dev.rollczi</groupId>
            <artifactId>litecommands-bukkit</artifactId>
            <version>3.0.3</version>
        </dependency>

        <!-- CONFIG -->
        <dependency>
            <groupId>eu.okaeri</groupId>
            <artifactId>okaeri-configs-yaml-bukkit</artifactId>
            <version>5.0.0-beta.5</version>
        </dependency>
        <dependency>
            <groupId>eu.okaeri</groupId>
            <artifactId>okaeri-configs-serdes-bukkit</artifactId>
            <version>5.0.0-beta.5</version>
        </dependency>

        <!-- KYORI -->
        <dependency>
            <groupId>net.kyori</groupId>
            <artifactId>adventure-api</artifactId>
            <version>4.14.0</version>
        </dependency>
        <dependency>
            <groupId>net.kyori</groupId>
            <artifactId>adventure-text-minimessage</artifactId>
            <version>4.14.0</version>
        </dependency>
        <dependency>
            <groupId>net.kyori</groupId>
            <artifactId>adventure-platform-bukkit</artifactId>
            <version>4.3.1</version>
        </dependency>

        <!-- WORLDEDIT -->
        <dependency>
            <groupId>com.sk89q.worldedit</groupId>
            <artifactId>worldedit-bukkit</artifactId>
            <version>7.2.9</version>
            <scope>provided</scope>
        </dependency>

    </dependencies>

    <modelVersion>4.0.0</modelVersion>

</project>